--- a/duapune.html
+++ b/duapune.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap Example</title>
+    <title>duapune.com</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -11,32 +11,71 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav class="navbar navbar-expand-sm  navbar-dark">
     <!-- Brand -->
-    <a class="navbar-brand" href="#">duapune.com</a>
+    <a class="navbar-brand text-dark" href="#">duapune.com</a>
 
     <!-- Links -->
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="#">Link 1</a>
+            <a class="nav-link text-dark " href="#"><strong>Rreth nesh</strong></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Link 2</a>
+            <a class="nav-link text-dark" href="#"><b>Sherbime</b></a>
         </li>
 
         <!-- Dropdown -->
+
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                Dropdown link
+            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbardrop1" data-hover="dropdown" data-toggle="dropdown">
+                <b>Veprime te shpejta</b>
             </a>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Link 1</a>
-                <a class="dropdown-item" href="#">Link 2</a>
-                <a class="dropdown-item" href="#">Link 3</a>
+                <a class="dropdown-item" href="#"><b>Punekerkues</b></a>
+                <a class="dropdown-item" href="#">Krijo/Shto CV</a>
+                <a class="dropdown-item" href="#">Shembull CV-je</a>
+                <a class="dropdown-item" href="#"><b>Punedhenes</b></a>
+                <a class="dropdown-item" href="#">Posto pune</a>
+            </div>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbardrop" data-hover="dropdown" data-toggle="dropdown">
+                <b>Na kontaktoni</b>
+            </a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">Na kontaktoni</a>
+                <a class="dropdown-item" href="#">Mendimi Juaj</a>
+                <a class="dropdown-item" href="#">Trego historine tende</a>
             </div>
         </li>
     </ul>
+
 </nav>
+<div>
+    <div class="card-group">
+        <div class="card bg-warning" >
+            <div class="card-body text-center">
+                <p class="card-text">Some more text to increase the height</p>
+                <a href="#" class="btn btn-outline-secondary  stretched-link">See Profile</a>
+            </div>
+        </div>
+        <div class="card bg-warning" >
+            <div class="card-body text-center">
+                <p class="card-text">Some text inside the second card</p>
+                <a href="#" class="btn btn-outline-secondary  stretched-link">See Profile</a>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+<hr>
+<div class="container">
+    <button type="button" class="btn btn-primary btn-sm badge-pill "><a class="text-white" href="#"><b>Informatike</b></a></button>
+    <button type="button" class="btn btn-primary btn-sm badge-pill "><a class="text-white" href="#"><b>Hoteleri - Turizem</b></a></button>
+    <button type="button" class="btn btn-primary btn-sm badge-pill "><a class="text-white" href="#"><b>Administrim Biznesi</b></a></button>
+    <button type="button" class="btn btn-primary btn-sm badge-pill "><a class="text-white" href="#"><b>Shitje - Marketing</b></a></button>
+    <button type="button" class="btn btn-primary btn-sm badge-pill "><a class="text-white" href="#"><b>Finance - Banke</b></a></button>
+</div>
 <br>
 
 <div class="container">
