Designed job item, added comments, added styles.css file.

--- a/duapune.html
+++ b/duapune.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./libs/bootstrap.min.css">
     <link href="libs/fontawesome/css/all.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
     <script src="./libs/jquery.min.js"></script>
     <script src="./libs/popper.min.js"></script>
@@ -19,7 +20,7 @@
     <a class="navbar-brand text-dark" href="#">
         ♚ duapune.com</a>
 
-    <!-- Links -->
+    <!--navbar -->
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link text-dark " href="#"><strong>Rreth nesh</strong></a>
@@ -55,6 +56,7 @@
     </ul>
 </nav>
 
+<!-- head -->
 <div class="row text-center " style="background: #0099cb">
     <div class="col-sm-6 ">
         <div class="bg-#0099cb">
@@ -74,6 +76,9 @@
     </div>
 </div>
 <hr>
+
+<!-- butonat posht head -->
+
 <div class="container text-center">
     <button type="button" class="btn btn-outline-primary btn-sm badge-pill "><a class="text-black-50" href="#"><small></small><b>Informatike</b></a></button>
     <button type="button" class="btn btn-outline-primary btn-sm badge-pill "><a class="text-black-50" href="#"><b>Hoteleri - Turizem</b></a></button>
@@ -82,7 +87,10 @@
     <button type="button" class="btn btn-outline-primary btn-sm badge-pill "><a class="text-black-50" href="#"><b>Finance - Banke</b></a></button>
 </div>
 <br>
-<div class="container-fluid" style="width:70%">
+
+<!-- Forma Kerkimi i avancuar -->
+
+<div class="container-fluid" style="width:85%">
     <div class="row">
         <div class="col-3 ">
             <h4>Kerkim i avancuar</h4>
@@ -104,25 +112,125 @@
                 <button type="submit" class="btn btn-outline-success" style="width: 100%">Kerko</button>
             </form>
         </div>
+
+        <!-- Shfaqja e puneve -->
         <div class="col-6 customlistinghome">
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row no-gutters">
-                    <div class="col-md-4 p-3">
-                        <img src="./img/201.jpg" class="card-img rounded-circle" style="width: 70px;" alt="image">
+            <div class="row">
+                <!--job item 1-->
+                <div class="card col-12 mb-1 job-item">
+                    <div class="row no-gutters">
+                        <div class="col-1">
+                            <img src="img/201.jpg" class="card-img rounded-circle logo" alt="foto">
+                        </div>
+                        <div class="col-8">
+                            <div class="card-body">
+                                <div class="card-text">Online English Teacher (work from home)</div>
+                                <div class="card-text">
+                                    <small class="text-muted">Native Camp PTE. LTD</small>
+                                </div>
+                                <div class="card-text mt-2">
+                                    <button type="button" class="btn btn-outline-primary btn-sm">Mesues</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="card-body">
+                                <div class="card-text">
+                                    <small class="text-muted">
+                                        <a href="#"><i class="fa fa-location-arrow" aria-hidden="true"></i> Tirane</a>
+                                    </small>
+                                </div>
+                                <div class="card-text">
+                                    <small class="text-muted"><i class="fa fa-clock" aria-hidden="true"></i> 24/04/2020</small>
+                                </div>
+                                <div class="card-text mt-2">
+                                    <button type="button" class="btn btn-success btn-sm">Success</button>
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+                <!--job item 2-->
+                <div class="card col-12 mb-1 job-item job-item-promotion">
+                    <div class="row no-gutters">
+                        <div class="col-1">
+                            <img src="img/201.jpg" class="card-img rounded-circle logo" alt="foto">
+                        </div>
+                        <div class="col-8">
+                            <div class="card-body">
+                                <div class="card-text">Online English Teacher (work from home)</div>
+                                <div class="card-text">
+                                    <small class="text-muted">Native Camp PTE. LTD</small>
+                                </div>
+                                <div class="card-text mt-2">
+                                    <button type="button" class="btn btn-outline-primary btn-sm">Mesues</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="card-body">
+                                <div class="card-text">
+                                    <small class="text-muted">
+                                        <a href="#"><i class="fa fa-location-arrow" aria-hidden="true"></i> Tirane</a>
+                                    </small>
+                                </div>
+                                <div class="card-text">
+                                    <small class="text-muted"><i class="fa fa-clock" aria-hidden="true"></i> 24/04/2020</small>
+                                </div>
+                                <div class="card-text mt-2">
+                                    <button type="button" class="btn btn-success btn-sm">Success</button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!--job item 3-->
+                <div class="card col-12 mb-1 job-item">
+                    <div class="row no-gutters">
+                        <div class="col-1">
+                            <img src="img/201.jpg" class="card-img rounded-circle logo" alt="foto">
+                        </div>
+                        <div class="col-8">
+                            <div class="card-body">
+                                <div class="card-text">Online English Teacher (work from home)</div>
+                                <div class="card-text">
+                                    <small class="text-muted">Native Camp PTE. LTD</small>
+                                </div>
+                                <div class="card-text mt-2">
+                                    <button type="button" class="btn btn-outline-primary btn-sm">Mesues</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="card-body">
+                                <div class="card-text">
+                                    <small class="text-muted">
+                                        <a href="#"><i class="fa fa-location-arrow" aria-hidden="true"></i> Tirane</a>
+                                    </small>
+                                </div>
+                                <div class="card-text">
+                                    <small class="text-muted"><i class="fa fa-clock" aria-hidden="true"></i> 24/04/2020</small>
+                                </div>
+                                <div class="card-text mt-2">
+                                    <button type="button" class="btn btn-success btn-sm">Success</button>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+
         <div class="col-3 text-center">
             <h4>Identifikohu</h4>
             <hr>
+
+            <!-- Forma Identifikohu -->
+
             <form class="form-group" action="/action_page.php">
                 <input type="email" class="form-control" id="email" placeholder="Adresa Email" name="email"><br>
                 <input type="password" class="form-control" id="paswd" placeholder="Fjalekalimi" name="pswd"><br>
